# luxtj_be

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  notes.txt  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: build-and-push.yml
alembic/: env.py
alembic/versions/: 20260530_a1b2c3d4e5f6_initial_schema.py  20260530_b2c3d4e5f6a7_add_deleted_at_to_marketing_campaigns.py  20260601_c3d4e5f6a7b8_add_marketing_offers_table.py  20260601_d4e5f6a7b8c9_add_action_centre_tables.py  20260608_4e3eebad732e_waitlist_addition.py  20260610_b0682c3db2c7_add_action_centre.py  20260630_e1f2a3b4c5d6_add_account_auth_tables.py  20260701_f6a7b8c9d0e1_add_customer_bucket_list_tables.py  20260716_9a8b7c6d5e4f_add_customer_personal_calendar_tables.py  20260723_a7c8d9e0f1a2_add_deleted_at_to_customer_personal_calendar_items.py
app/: main.py
app/common/: utils.py
app/config/: settings.py
app/core/: app.py  context.py  datastore.py  exceptions.py  main.py  router.py  serializer.py
app/core/middleware/: id_injector.py  request_context.py
app/personal_travel_calendar/: models.py  router.py  serializers.py
app/user/: router.py  serializer.py  service.py
docker/: Dockerfile.dev  docker-compose.dev.yml
docs/architecture/: TIME_SCALE_IMPLEMENTATION.md  modular-monolith-ddd-hexagonal.md  testing-guidelines.md  worker-framework.md
docs/dev/: marketing-offers-implementation-plan.md
docs/dev/proposed/: action-centre.md
docs/migration/: alembic-workflow.md  api-common-migration.md  context-migration-guidelines.md
emporio/: main.py
emporio/config/: logger.py  settings.py
emporio/core/: context.py  datastore.py  main.py  router.py  serializer.py
emporio/core/middleware/: id_injector.py  request_context.py
emporio/personal_travel_calendar/: models.py  router.py  serializers.py
emporio/user/: router.py  serializer.py  service.py
openspec/changes/add-customer-personal-calendar/: proposal.md  tasks.md
openspec/changes/archive/2026-06-30-add-otp-account-auth/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-01-add-customer-bucket-list/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-16-add-customer-personal-calendar/: design.md
openspec/specs/account-identity-store/: spec.md
openspec/specs/account-otp-auth/: spec.md
openspec/specs/customer-bucket-list/: spec.md
openspec/specs/customer-personal-calendar/: spec.md
src/admin_api/: customer.py  customer_old.py  main.py
src/admin_api/audit_logs/: __init__.py  domainmodel.py  router.py  serializers.py  service.py
src/admin_api/customer/: __init__.py  enums.py  router.py
src/admin_api/marketing/: __init__.py
src/admin_api/partner/: __init__.py  router.py
src/admin_api/reports/: __init__.py  enums.py  router.py  timeranges.py
src/api/: config.py  main.py
src/api/idam/: __init__.py
src/app/: __version__.py  main.py
src/app/api/admin/: __init__.py
src/app/core/: bases.py  config.py  database.py  dep_injectors.py  logging.py  response_models.py
src/app/middleware/: __init__.py  auth.py  base.py  exceptions.py  logging.py  method_validator.py
src/common/: injectorlib.py  kernellib.py  loglib.py  middlewarelib.py  serializerlib.py
src/common/service/: metadata.py
src/common/tourradar/: auth.py
src/luxtj/: protocols.py  service.py
src/luxtj/bootstrap/: __init__.py  action_centre_projector.py  api.py  config.py  persistence.py
src/luxtj/contexts/: __init__.py
src/luxtj/domain/: entity.py  enums.py
src/luxtj/domains/: enums.py
src/luxtj/exceptions/: authentication.py  base.py
src/luxtj/shared_kernel/: __init__.py
src/luxtj/utils/: mockutils.py  time.py  timeutils.py
tests/: conftest.py  test_app.py
tests/contexts/: __init__.py
tests/contexts/marketing/: __init__.py  test_marketing_campaigns.py
tests/luxtj/bootstrap/: conftest.py  test_api.py
tests/test_api/: conftest.py  test_main.py
(+284 files in other folders)
