[project]
name = "luxtjbe"
version = "0.1.0"
description = "LuxTJ backend"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.130.0",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "niquests>=3.18.3",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/app"
]

[tool.ruff]
line-length = 100
src = [
    "src",
    "tests"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.3",
]
