[project]
name = "luxtjbe"
version = "0.1.0"
description = "LuxTJ backend"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.32.0",
]


[tool.ruff]
line-length = 100
src = [
    "src",
    "tests"
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (potential bugs)
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (syntax modernization)
    "PTH",  # flake8-use-pathlib (best practices)
    "N",    # pep8-naming
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501", # Ignore line-length violations (let formatter handle it)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = [
    "src"
]

[tool.pytest]
env_files = [
    ".dev.env"
]
addopts = [
    "-ra", 
    "--cov", 
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.15.3",
]
